--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,15 @@
-
 body{
   background-color: #ADB5AC;
-  margin: 10px;
+  margin: 0px;
   padding: 0px;
+  border: 0px;
+}
+
+html{
+  margin: 0px;
+  padding: 0px;
+  border: 0px;
+  
 }
 
 .header{
@@ -19,9 +26,8 @@ body{
   width: 185px;
   height: 100vh;
   padding: 10px;
-  padding-right: 6px;
+  padding-right: 10px;
   padding-top: 6px;
-  border-radius: 15px; 
   grid-area: button-bar;
 }
 
@@ -31,9 +37,6 @@ button{
 
 .text-body{
   padding-left: 20px;
-  display: flex;
-  flex-direction: row;
-  flex: 1;
   text-align: center;
   background-color: #ADB5AC;
   grid-area: text-body;
