--- a/styles/style.css
+++ b/styles/style.css
@@ -13,22 +13,25 @@ html{
 }
 
 .header{
-  display: flex;
-  flex-direction: row;
-  flex: 1;
   text-align: center;
   background-color: #ADB5AC;
-  grid-area: header;
+  grid-column: 2;
+  grid-row: 1;
+  height: 10vh;
+  
+  
 }
 
 .button-bar{
   background: linear-gradient(#0A4500 50%,#0F2600);
-  width: 185px;
+  width: 20vh;
   height: 100vh;
-  padding: 10px;
-  padding-right: 10px;
+  padding: 1vw;
   padding-top: 6px;
-  grid-area: button-bar;
+  grid-column: 1/2;
+  grid-row: 1/3;
+
+  
 }
 
 button{
@@ -36,24 +39,24 @@ button{
 }
 
 .text-body{
-  padding-left: 20px;
+  padding-left: 1vw;
   text-align: center;
   background-color: #ADB5AC;
-  grid-area: text-body;
+  grid-column: 2;
+  grid-row: 2;
+ 
 }
 
 #container{
+  width: 100vw;
+  height: 100vh;
   display: grid;
-  grid-template:
-  "button-bar header header" 120px
-  "button-bar text-body text-body" 1fr
-  "button-bar text-body text-body" 1fr
-  / [col-start] 205px [col-1] 1fr [col-end] 1fr;
-  background-color: #ADB5AC;  
+  grid-template-columns: 1fr 7fr;
+  grid-template-rows: 1fr 6fr;   
+  
 }
 
-.margin{
-  margin:80px;
-  background-color: red;
-}
+
+
+
 
