--- a/styles/text.css
+++ b/styles/text.css
@@ -1,16 +1,16 @@
 .summary {
   font-family: poppins, sans-serif;
-  font-size: 20px;
+  font-size: 1.2vw;
   text-align: left;
   color: #454A43; 
   margin-top: 0px;
   margin-bottom: 0px;
-  width: 100%;
+ 
 }
 
 .name {
   font-family: Hedvig Letters Serif, serif;
-  font-size: 40px;
+  font-size: 2.5vw;
   color: #454A43;
   text-align: center;
   width: 100%;
