--- a/styles/style.css
+++ b/styles/style.css
@@ -24,7 +24,7 @@ html{
 
 .button-bar{
   background: linear-gradient(#0A4500 50%,#0F2600);
-  width: 20vh;
+  width: 10vw;
   height: 100vh;
   padding: 1vw;
   padding-top: 6px;
