--- a/styles/text.css
+++ b/styles/text.css
@@ -1,6 +1,6 @@
 .summary {
   font-family: poppins, sans-serif;
-  font-size: 1.2vw;
+  font-size: calc(18px + 0.5vw);
   text-align: left;
   color: #454A43; 
   margin-top: 0px;
@@ -10,7 +10,7 @@
 
 .name {
   font-family: Hedvig Letters Serif, serif;
-  font-size: 2.5vw;
+  font-size: calc(40px + 0.5vw);
   color: #454A43;
   text-align: center;
   width: 100%;
