--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -77,3 +77,32 @@
   color: #36B02A;
   background-color: rgb(0, 0, 0);
 }
+
+.contact-button {
+  background-color: #131212; 
+  color: #D2D9D2;
+  border: none;
+  height: 90px;
+  width: 10vw;
+  font-size: calc(10px + 0.5vw);
+  border-radius: 10px;
+  cursor: pointer;
+  font-family: poppins, sans-serif;
+  transition: opacity 0.3s ease,
+  background-color 0.3s ease, color 0.3s ease;
+  transition: box-shadow 0.3s ease;
+  transition: text-decoration-color 0.3s ease;
+}  
+
+.contact-button:hover  {
+  opacity :0.7;
+  background-color: rgb(0, 0, 0);
+  color: white;
+  box-shadow: 3px 3px 5px rgba(54, 176, 42, 0.596);
+  text-decoration: underline;
+}
+
+.contact-button:active {
+  color: #36B02A;
+  background-color: rgb(0, 0, 0);
+}
