--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,6 @@ html{
   margin: 0px;
   padding: 0px;
   border: 0px;
-  
 }
 
 .header{
@@ -18,20 +17,16 @@ html{
   grid-column: 2;
   grid-row: 1;
   height: 10vh;
-  
-  
 }
 
 .button-bar{
   background: linear-gradient(#0A4500 50%,#0F2600);
-  width: 10vw;
+  width: 10.2vw;
   height: 100vh;
   padding: 1vw;
-  padding-top: 6px;
+  padding-top: 2vh;
   grid-column: 1/2;
   grid-row: 1/3;
-
-  
 }
 
 button{
@@ -44,7 +39,6 @@ button{
   background-color: #ADB5AC;
   grid-column: 2;
   grid-row: 2;
- 
 }
 
 #container{
@@ -53,7 +47,6 @@ button{
   display: grid;
   grid-template-columns: 1fr 7fr;
   grid-template-rows: 1fr 6fr;   
-  
 }
 
 
