--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@ body{
   margin: 0px;
   padding: 0px;
   border: 0px;
+  overflow-x: hidden;
 }
 
 html{
@@ -17,20 +18,23 @@ html{
   grid-column: 2;
   grid-row: 1;
   height: 10vh;
+  box-sizing: border-box;
 }
 
 .button-bar{
   background: linear-gradient(#0A4500 50%,#0F2600);
-  width: 10.2vw;
+  width: 12.2vw;
   height: 100vh;
   padding: 1vw;
   padding-top: 2vh;
   grid-column: 1/2;
   grid-row: 1/3;
+  box-sizing: border-box;
 }
 
 button{
   margin-bottom: 10px;
+  box-sizing: border-box;
 }
 
 .text-body{
@@ -48,8 +52,6 @@ button{
   grid-template-columns: 1fr 7fr;
   grid-template-rows: 1fr 6fr;   
 }
-
-
 
 
 
